Pagina de Visualização do Livro
Não está completado ainda

--- a/css/view_book_pag.css
+++ b/css/view_book_pag.css
@@ -64,7 +64,11 @@
     justify-content: space-evenly;
 }
 
-
+.outro{
+    display: flex; 
+    flex-direction: row; 
+    align-items: center;
+}
 
 .container .square{
     height: 300px;
