--- a/css/pagina_inicial_estilo.css
+++ b/css/pagina_inicial_estilo.css
@@ -69,11 +69,12 @@
 .container .square{
     height: 300px;
     width: 250px;
-    background-color: #555;
+    background-color: #985D42;
     display: flex;
     color:aliceblue;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+
 }
 
 .container .square2{
@@ -81,10 +82,19 @@
     width: 111px;
     background-color: #555;
     display: flex;
-    color:aliceblue;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
+    color:black;
+    justify-content: flex-end;
     border-radius: 15%;
+}
+
+.square2 p {
+    padding: 10px;
+}
+
+.square2 div{
+    background-color: rgba(255, 255, 255, 0.6);
+    border-radius: 0 0 15px 15px;
 }
 
 
@@ -93,8 +103,17 @@
     width: 700px;
     background-color: #555;
     display: flex;
-    color:aliceblue;
+    flex-direction: column;
+    color: black;
     justify-content: center;
     align-items: center;
     border-radius: 2%;
+    background: linear-gradient(to top, #fef08a, #fca5a5);
+    border-radius: 20px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+}
+
+.square3 .avaliacao img{
+    padding: 5px;
 }
